treesitter/grammar.js
    source_file: $ => repeat($._statement),

    // ── Statements ────────────────────────────────────────────────────────

    /**
     * `<attribute>* <definition>`. The attributes belong to the definition
     * after them, and appear as its preceding siblings: every kind of
     * definition may carry them, so they are read here, once, rather than
     * inside each of the five. A block's `let` is read by `do_block` directly
     * and so takes none, the way `parse.rs` refuses them there.
     */
    _statement: $ => seq(
      repeat($.attribute),
      choice(
        $.extern_definition,
        $.let_definition,
        $.type_definition,
        $.effect_definition,
        $.module_definition,
        $.using_statement,
      ),
    ),

    /**
     * `@key` or `@key <literal>` — one entry of a definition's metadata. The
     * value is literal data: nothing that begins a definition begins a
     * literal, so whether one follows the key is never in doubt.
     */
    extern_definition: $ => seq(
      'extern',
      field('name', $.identifier),
      ':',
      field('type', $.extern_annotation),
      '=',
      field('target', $.string),
    ),

    /** The extern-only ABI type plus its ordinary outer `where` clause. */
    extern_annotation: $ => seq(
      field('type', $._extern_type),
      optional(field('clause', $.where_clause)),
    ),

    _extern_type: $ => choice(
      $.annotated_extern_type,
      $.extern_function_type,
      $.parenthesized_extern_function_type,
      $._type,
    ),

    extern_function_type: $ => prec.right(seq(
      'fn',
      '(',
      optional(seq(
        field('parameter', $._extern_type),
        repeat(seq(',', field('parameter', $._extern_type))),
        optional(','),
      )),
      ')',
      '->',
      field('result', $._extern_type),
      optional(field('effects', $.effect_row)),
    )),

    /** Transparent grouping around marked or annotated boundary types. */
    parenthesized_extern_function_type: $ => seq(
      '(',
      field('type', choice(
        $.annotated_extern_type,
        $.extern_function_type,
        $.parenthesized_extern_function_type,
      )),
      ')',
    ),

    /**
     * `let <pattern> [: <annotation>] = <expr>`, or the discard shorthand
     * `_ [: <annotation>] = <expr>`. Both spellings keep the same definition
     * and wildcard nodes, so discards never introduce a local name.
     */
    let_definition: $ => seq(
      choice(
        seq('let', field('pattern', $._pattern)),
        field('pattern', $.wildcard),
      ),
      optional(seq(':', field('type', $.annotation))),
      '=',
      field('body', $._expression),
    ),

    /**
     * `type <name> <'param>* = <annotation>`
     *
     * The parameters are variables, and wear the `'` an annotation's variable
     * does: a bare name in a type resolves to something declared elsewhere, and
     * a parameter resolves to whatever the use site hands it.
     */
    type_definition: $ => seq(
      'type',
      field('name', $.identifier),
      repeat(field('parameter', $.type_variable)),
      '=',
      field('body', $.annotation),
    ),

    /**
     * Empty, alias, unnamed singleton, and named closed-interface effects.
     *
     * The parameters are the ones a `type` declaration binds, written the
     * same way: `effect Ask 'a = { get: () -> 'a }` takes one, and every row
     * naming `!Ask` hands it an argument.
     */
    effect_definition: $ => seq(
      'effect',
      field('name', $.identifier),
      repeat(field('parameter', $.type_variable)),
      optional(seq('=', field('body', choice(
        prec(1, $.effect_alias_union),
        $._effect_operation_signature,
        $.named_effect_interface,
      )))),
    ),

    /**
     * `!Ask 'a + !Log + ..'e` — the row an alias stands for: applications of
     * other effects, and at most one tail naming a declared parameter.
     */
    _effect_operation_signature: $ => choice(
      $.function_type,
      $.parenthesized_effect_operation_signature,
    ),

    _expression: $ => choice(
      $.match_function,
      $.function,
      $.raise_expression,
      $.assignment,
      $.pipeline,
      $._boolean_or,
    ),

    _application_expression: $ => choice(
      $.application,
      $._head_expression,
    ),

    /**
     * The expressions an application may be built from. An `if`, `match`,
     * `handle`, or `do` reaches here — each may be applied and projected off —
     * but none begins an argument, which is what keeps `f match ... end` from
     * being an application of `f`.
     */
    application: $ => prec.left(PREC.application, seq(
      field('function', $._application_expression),
      field('argument', $._argument),
    )),

    /**
     * What may follow a function without parentheses around it: the atoms
     * `Parser::at_expr_atom` lists, whatever is projected off one of them, and
     * a `fn`, whose body then runs to the end of the application.
     */
    _argument: $ => choice(
      $._argument_atom,
      alias($._atom_projection, $.projection),
      $.match_function,
      $.function,
    ),

    // A projection whose base is an atom rather than a `match` or a `handle`,
    // since neither of those begins an argument. The same node as
    // [`projection`], reached from the one position that narrows what it may
    // be read off.
    _atom: $ => choice($._non_tag_atom, $.tag_expression),

    projection: $ => prec.left(PREC.projection, seq(
      field('base', choice(
        $._atom,
        $.projection,
        $.if_expression,
        $.match_expression,
        $.handle_expression,
        $.do_block,
      )),
      '.',
      field('field', choice(
        $.identifier,
        $.string,
        $.numeric_field,
        alias($._malformed_numeric_field, $.ERROR),
      )),
    )),

    /** `fn <arg>+ => <expr>` — the body runs as far right as it can. */
    function: $ => prec.right(seq(
      'fn',
      repeat1(field('parameter', choice($.identifier, $.wildcard))),
      '=>',
      field('body', $._expression),
    )),

    /** `fn | <pattern> => <expr> (| <pattern> => <expr>)*`. */
    match_function: $ => prec.right(seq(
      'fn',
      '|',
      sepBy1('|', $.match_arm),
    )),

    /**
     * `do <let-or-discard>* [return <expr>] end` — bindings and discards,
     * and the value the block ends with. Other definitions are refused at
     * their keyword, the way `parse.rs` refuses them.
     */
    do_block: $ => seq(
      'do',
      repeat(field('statement', choice($.let_definition, $.using_statement))),
      optional(seq('return', field('value', $._expression))),
      'end',
    ),

    /**
     * `if <condition> then <expr> (else if <condition> then <expr>)*
     * else <expr> end`.
     *
     * An else-if chain is one expression with one final `end`; individual
     * arms deliberately have no terminator of their own.
     */
    if_expression: $ => seq(
      'if',
      field('condition', $._expression),
      'then',
      field('consequent', $._expression),
      repeat(field('else_if', $.else_if_arm)),
      'else',
      field('alternative', $._expression),
      'end',
    ),

    // Prefer closing an arm when another `else` arrives. A nested `if` in an
    // arm still owns its `else` because its required `end` makes that reading
    // unambiguous once the rest of the input is seen.
    else_if_arm: $ => prec.left(seq(
      'else',
      'if',
      field('condition', $._expression),
      'then',
      field('consequent', $._expression),
    )),

    /** `match <expr> with [|] <arm> (| <arm>)* end` */
    match_expression: $ => seq(
      'match',
      field('scrutinee', $._expression),
      'with',
      optional(seq(optional('|'), sepBy1('|', $.match_arm))),
      'end',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      '=>',
      field('body', $._expression),
    ),

    /** `handle <expr> with [|] <arm> (| <arm>)* end` */
    handle_expression: $ => seq(
      'handle',
      field('body', $._expression),
      'with',
      optional(seq(optional('|'), sepBy1('|', $.handler_arm))),
      'end',
    ),

    /**
     * `!Log.write s => ...` or `return x => ...`. `return` heads an arm here
     * and is an ordinary name everywhere else.
     */
    handler_arm: $ => seq(
      field('head', choice($.operation, 'return')),
      field('binder', choice($.identifier, $.wildcard)),
      '=>',
      field('body', $._expression),
    ),

    /** `raise <expr>` — the body runs as far right as a `fn`'s does. */
    raise_expression: $ => prec.right(seq('raise', $._expression)),

    /**
     * `{ x: 1, y: 2, ..c }`, with an optional trailing comma: the fields it
     * names, then — at most once, and last — a `..` spreading every field of
     * one more value in. The same `spread` node an array literal has, since
     * it is the same `..` and the same whole-expression operand.
     */
    struct_expression: $ => seq('{', optional($._struct_items), '}'),

    _struct_items: $ => choice(
      seq($.spread, optional(',')),
      seq($.struct_field, optional(seq(',', optional($._struct_items)))),
    ),

    struct_field: $ => seq(
      field('name', fieldLabel($)),
      ':',
      field('value', $._expression),
    ),

    /** `#Some 1` — one case of a sum, with what it carries. */
    tag_expression: $ => prec.right(PREC.tag, seq(
      field('name', $.tag),
      optional(field('payload', choice($.tag_expression, $._argument))),
    )),

    /** `!Log`, `!State.get`, or a module-qualified form. */
    operation: $ => choice(
      prec(1, seq(
        field('effect', choice($.effect_label, $.effect_path)),
        '.',
        field('name', $.identifier),
      )),
      field('effect', choice($.effect_label, $.effect_path)),
    ),

    /** Positional structs permit one trailing spread. */
    tuple_expression: $ => seq(
      '(',
      choice(
        seq($.spread, optional(',')),
        seq(field('element', $._expression), ',', optional($._tuple_expression_tail)),
      ),
      ')',
    ),

    _tuple_expression_tail: $ => choice(
      seq($.spread, optional(',')),
      seq(field('element', $._expression), optional(seq(',', optional($._tuple_expression_tail)))),
    ),

    /**
     * `[a, ..b, c]` — an immutable homogeneous array, with an optional
     * trailing comma. An item is a value, or a `..` spreading another array's
     * values into the literal where it sits.
     */
    spread: $ => seq('..', field('value', $._expression)),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // ── Patterns ──────────────────────────────────────────────────────────

    _pattern: $ => choice(
      $.identifier,
      $.wildcard,
      $.natural,
      $.string,
      $.boolean,
      $.unit,
      $.struct_pattern,
      $.tuple_pattern,
      $.array_pattern,
      $.tag_pattern,
      $.hidden_pattern,
      $.parenthesized_pattern,
    ),

    /** `{ x, y: <pattern>, .. }`, with an optional trailing comma. */
    tag_pattern: $ => prec.right(PREC.tag, seq(
      field('name', $.tag),
      optional(field('payload', $._pattern)),
    )),

    /** Positional struct patterns may end with a bare rest. */
    annotation: $ => seq(
      field('type', $._type),
      optional(field('clause', $.where_clause)),
    ),

    _type: $ => choice($.hidden_type, $.function_type, $._type_sum),

    /**
     * `hide 'a => <type>` — a hidden type. The body extends as far right as
     * it can, the way a lambda's does, so it takes the whole arrow after it
     * and needs parentheses as an arrow's input or an application's argument;
     * `Parser::arrow` reads it above the arrow for the same reason.
     */
    function_type: $ => prec.right(seq(
      field('from', $._type_sum),
      '->',
      field('to', $._type),
      optional(field('effects', $.effect_row)),
    )),

    _type_sum: $ => choice($.sum_type, $.effect_type, $._type_application),

    /**
     * `[|] <case> ('|' <case>)* ['|' ..[<rest>]]` — a sum, as the cases it
     * allows. `|` alone is the sum with no cases at all.
     */
    effect_row: $ => seq('+', choice('|', $._effect_row_body)),

    _effect_row_body: $ => choice($.rest, $._effect_row_cases),

    // Right-associative, so a row written as an arrow's result takes every `+`
    // after it: `A -> !Log + !IO` hands the parameter both effects rather than
    // hanging the second one off the arrow.
    effect_case: $ => seq(
      field('name', choice($.effect_label, $.effect_path)),
      repeat(field('argument', $._type_atom)),
      optional(field('when', $.parenthesized_when)),
    ),

    /** `\!Log`, or `\!Ask Nat` — the effect is definitely not performed. */
    _type_atom: $ => choice(
      $.boolean,
      $.identifier,
      $.path,
      $.type_variable,
      $.hole,
      $.unit,
      $.struct_type,
      $.array_type,
      $.mut_type,
      $.tuple_type,
      $.parenthesized_type,
    ),

    /** `{ x: Nat, y when 'a: Nat, \z, ..'r }`, with an optional trailing comma. */
    struct_type: $ => seq('{', optional($._struct_type_body), '}'),

    _struct_type_body: $ => choice(
      $.rest,
      seq(
        choice($.struct_type_field, $.absent_field, $.fixed_type_spread),
        optional(seq(',', optional($._struct_type_body))),
      ),
    ),

    /** A fixed named row; applications are parenthesized. */
    struct_type_field: $ => seq(
      field('name', fieldLabel($)),
      optional(field('when', $.when_clause)),
      ':',
      field('type', $._type),
    ),

    /** `\name` — the label is definitely not there. */
    parenthesized_type: $ => seq('(', $._type, ')'),

    // ── `where` clauses ───────────────────────────────────────────────────

    where_clause: $ => seq('where', sepBy1(';', $._clause)),

    _clause: $ => choice($.clause_comparison, $._clause_or),

    /** `a = b` or `a != b`. Non-associative: `a = b = c` has no reading. */
    clause_comparison: $ => seq(
      field('left', $._clause_or),
      field('operator', choice('=', '!=')),
      field('right', $._clause_or),
    ),

    _clause_or: $ => choice($.clause_or, $._clause_and),
    unit: _ => seq('(', ')'),

    /** `_` — a value being thrown away. */
    wildcard: _ => '_',

    /** `_` in a type: a position left for inference to decide. */
    identifier: _ => new RegExp(IDENT.source, 'u'),

    /**
     * `#Some` or `#"some case"` — one case of a sum, named. A quoted tag is
     * one token so whitespace may not separate its `#` from the opening quote.
     */
    tag: _ => choice(
      new RegExp(TAG.source, 'u'),
      token(seq('#', '"', repeat(choice(/[^"\\\n]/, /\\["\\nrt]/)), '"')),
    ),

    /** `!Log` — an effect, named. The `!` is not part of the name. */
    effect_label: _ => new RegExp(EFFECT.source, 'u'),

    /** `@deprecated` — an attribute's key. The `@` is not part of the name. */
    type_variable: _ => new RegExp(VARIABLE.source, 'u'),

    /**
     * A numeric literal: suffixless reals (including decimals), or target-sized
     * integers and naturals marked with `i` and `n`, optionally followed
     * by a fixed width (8, 16, 32, or 64). The broad trailing word
     * is intentional: the lexer diagnoses `1x` as one malformed literal.
     */
    natural: _ => new RegExp(/-?[0-9]+(?:\.[0-9]+)?[\p{Alphabetic}\p{N}_]*/.source, 'u'),

    /** A decimal positional field in a projection or structural label. */
    numeric_field: _ => /[0-9]+/,

    /**
     * A number-shaped field that the compiler consumes as one invalid token.
     * Besides suffixes such as `.0n` and `.0²`, this includes an adjacent
     * decimal tail: `p.0.0` is one malformed field, while `(p.0).0` is two
     * valid projections. The set subtraction keeps another ASCII digit in the
     * valid field token, so `.001` is not mistaken for a malformed suffix.
     */
