treesitter/test/corpus/expressions.txt
================================================================================
Application is left-associative
================================================================================

let a = f x y

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (application
        (identifier)
        (identifier))
      (identifier))))

================================================================================
Projection binds tighter than application
================================================================================

let a = f p.x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (identifier)
      (projection
        (identifier)
        (identifier)))))

================================================================================
A bare tag is one application argument
================================================================================

let a = f #A 1

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (application
        (identifier)
        (tag_expression
          (tag)))
      (natural))))

================================================================================
A tag's payload is taken greedily
================================================================================

let a = #A #B x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (tag_expression
      (tag)
      (tag_expression
        (tag)
        (identifier)))))

================================================================================
Payload-bearing tag arguments use parentheses
================================================================================

let a = f (#Some 1) #None x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (application
        (application
          (identifier)
          (parenthesized_expression
            (tag_expression
              (tag)
              (natural))))
        (tag_expression
          (tag)))
      (identifier))))

================================================================================
A function's body runs as far right as it can
================================================================================

let a = f fn x => g x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (identifier)
      (function
        (identifier)
        (application
          (identifier)
          (identifier))))))

================================================================================
A block binds names for the length of one expression
================================================================================

let named = do
  let half = { v: 21 }
  let whole : Nat = half.v
  return { doubled: whole, original: half }
end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (let_definition
        (identifier)
        (struct_expression
          (struct_field
            (identifier)
            (natural))))
      (let_definition
        (identifier)
        (annotation
          (identifier))
        (projection
          (identifier)
          (identifier)))
      (struct_expression
        (struct_field
          (identifier)
          (identifier))
        (struct_field
          (identifier)
          (identifier))))))

================================================================================
A block without a return, and the empty block
================================================================================

let effects = do
  let _ = !Log 1
end
let nothing = do end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (let_definition
        (wildcard)
        (application
          (operation
            (effect_label))
          (natural)))))
  (let_definition
    (identifier)
    (do_block)))

================================================================================
A block with only a return
================================================================================

let value = do return 1 end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (natural))))

================================================================================
A block heads an application and is projected from
================================================================================

let applied = do let f = g return f end 1
let field = do let p = q return p end.x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (do_block
        (let_definition
          (identifier)
          (identifier))
        (identifier))
      (natural)))
  (let_definition
    (identifier)
    (projection
      (do_block
        (let_definition
          (identifier)
          (identifier))
        (identifier))
      (identifier))))

================================================================================
A block is not an application argument
================================================================================

let a = f (do let x = 1 return x end)

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (identifier)
      (parenthesized_expression
        (do_block
          (let_definition
            (identifier)
            (natural))
          (identifier))))))

================================================================================
A return must be the last thing in its block
================================================================================

let a = do return 1 let x = 2 end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (ERROR
        (natural))
      (let_definition
        (identifier)
        (natural)))))

================================================================================
Only a let may be written in a block
================================================================================

let a = do type T = Nat return 1 end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (MISSING "end")))
  (type_definition
    (identifier)
    (annotation
      (identifier)))
  (ERROR
    (natural)))

================================================================================
A block nests in a block
================================================================================

let a = do
  let x = do let y = 1 return y end
  return do let z = x return z end
end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (let_definition
        (identifier)
        (do_block
          (let_definition
            (identifier)
            (natural))
          (identifier)))
      (do_block
        (let_definition
          (identifier)
          (identifier))
        (identifier)))))

================================================================================
A return carries a value
================================================================================

let a = do let x = 1 return end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (let_definition
        (identifier)
        (natural))
      (ERROR))))

================================================================================
A return belongs at the end of a block
================================================================================

let a = fn x => return x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (function
      (identifier)
      (ERROR)
      (identifier))))

================================================================================
No declaration but a let may be written in a block
================================================================================

let a = do effect E = () -> () return 1 end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (do_block
      (MISSING "end")))
  (effect_definition
    (identifier)
    (function_type
      (unit)
      (unit)))
  (ERROR
    (natural)))

================================================================================
`do` and `return` are not names
================================================================================

let do = 1
let return = 1

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (ERROR)
    (natural)
    (ERROR)
    (natural)))

================================================================================
`in` is an ordinary name
================================================================================

let in = 1
let a = f in

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (natural))
  (let_definition
    (identifier)
    (application
      (identifier)
      (identifier))))

================================================================================
A match, and the empty one
================================================================================

let unwrap = fn opt => match opt with
  | #Some x => x
  | _ => 0
  end

let absurd = fn v => match v with end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (function
      (identifier)
      (match_expression
        (identifier)
        (match_arm
          (tag_pattern
            (tag)
            (identifier))
          (identifier))
        (match_arm
          (wildcard)
          (natural)))))
  (let_definition
    (identifier)
    (function
      (identifier)
      (match_expression
        (identifier)))))

================================================================================
A function matching its implicit argument
================================================================================

let unwrap = fn
  | #Some x => x
  | #None => 0n

let nested = fn | #Outer => fn | #Inner => 1n | #Other => 2n

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_function
      (match_arm
        (tag_pattern
          (tag)
          (identifier))
        (identifier))
      (match_arm
        (tag_pattern
          (tag))
        (natural))))
  (let_definition
    (identifier)
    (match_function
      (match_arm
        (tag_pattern
          (tag))
        (match_function
          (match_arm
            (tag_pattern
              (tag))
            (natural))
          (match_arm
            (tag_pattern
              (tag))
            (natural)))))))

================================================================================
A handler, with a value arm
================================================================================

let quiet = fn _ =>
  handle greet () with
    | !Log.write s => ()
    | return x => x
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (function
      (wildcard)
      (handle_expression
        (application
          (identifier)
          (unit))
        (handler_arm
          (operation
            (effect_label)
            (identifier))
          (identifier)
          (unit))
        (handler_arm
          (identifier)
          (identifier))))))

================================================================================
An operation is a value, and performing one is applying it
================================================================================

let a = !Log.write 1

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (operation
        (effect_label)
        (identifier))
      (natural))))

================================================================================
Raising aborts to the handler around the arm
================================================================================

let a = handle f () with | !Fail.oops _ => raise 0 end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (handle_expression
      (application
        (identifier)
        (unit))
      (handler_arm
        (operation
          (effect_label)
          (identifier))
        (wildcard)
        (raise_expression
          (natural))))))

================================================================================
A struct, with a trailing comma, and the unit
================================================================================

let a = { x: 1, y: 2, }

let b = ()

let c = {}

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (struct_expression
      (struct_field
        (identifier)
        (natural))
      (struct_field
        (identifier)
        (natural))))
  (let_definition
    (identifier)
    (unit))
  (let_definition
    (identifier)
    (struct_expression)))

================================================================================
A struct spreads one value after its fields
================================================================================

let a = { x: 1, ..c }
let b = { ..f x, }
let c = { ..c }
let d = { 0: 1, "q": 2, ..{ y: 2, ..d } }
let e = { ..() }
let f = { 1: x, ..(1, 2) }

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (struct_expression
      (struct_field
        (identifier)
        (natural))
      (spread
        (identifier))))
  (let_definition
    (identifier)
    (struct_expression
      (spread
        (application
          (identifier)
          (identifier)))))
  (let_definition
    (identifier)
    (struct_expression
      (spread
        (identifier))))
  (let_definition
    (identifier)
    (struct_expression
      (struct_field
        (numeric_field)
        (natural))
      (struct_field
        (string)
        (natural))
      (spread
        (struct_expression
          (struct_field
            (identifier)
            (natural))
          (spread
            (identifier))))))
  (let_definition
    (identifier)
    (struct_expression
      (spread
        (unit))))
  (let_definition
    (identifier)
    (struct_expression
      (struct_field
        (numeric_field)
        (identifier))
      (spread
        (tuple_expression
          (natural)
          (natural))))))

================================================================================
A struct's spread comes once, and last
================================================================================

let a = { ..a, ..b }
let b = { ..a, x: 1 }

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (struct_expression
      (spread
        (identifier))
      (ERROR
        (identifier))))
  (let_definition
    (identifier)
    (struct_expression
      (ERROR
        (spread
          (identifier)))
      (struct_field
        (identifier)
        (natural)))))

================================================================================
Tuples are distinguished from grouping by their comma
================================================================================

let pair = (f x, y)
let singleton = (x,)
let projected = pair.001

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (tuple_expression
      (application
        (identifier)
        (identifier))
      (identifier)))
  (let_definition
    (identifier)
    (tuple_expression
      (identifier)))
  (let_definition
    (identifier)
    (projection
      (identifier)
      (numeric_field))))

================================================================================
Parentheses group and are then discarded
================================================================================

let a = f (g x)

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (identifier)
      (parenthesized_expression
        (application
          (identifier)
          (identifier))))))

================================================================================
Quoted struct fields work in construction and projection
================================================================================

let record = { "field name": 1, "line\nname": 2 }
let value = record."field name"

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (struct_expression
      (struct_field
        (string)
        (natural))
      (struct_field
        (string)
        (natural))))
  (let_definition
    (identifier)
    (projection
      (identifier)
      (string))))

================================================================================
Quoted tags form one adjacent constructor token
================================================================================

let wrapped = #"some case" #"inner case" 1

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (tag_expression
      (tag)
      (tag_expression
        (tag)
        (natural)))))

================================================================================
A quoted tag's sigil cannot be separated from its quote
================================================================================

let invalid = # "case"

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (ERROR
      (UNEXPECTED ' '))
    (string)))

================================================================================
ASCII and Unicode suffixed numeric projections are one malformed field
================================================================================

let ascii = p.0n
let unicode = p.0²
let valid = p.001

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (projection
      (identifier)
      (ERROR)))
  (let_definition
    (identifier)
    (projection
      (identifier)
      (ERROR)))
  (let_definition
    (identifier)
    (projection
      (identifier)
      (numeric_field))))

================================================================================
Adjacent numeric projections require grouping or whitespace
================================================================================

let invalid = p.0.0
let printed = (p.0).0
let spaced = p.0 .0

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (projection
      (identifier)
      (ERROR)))
  (let_definition
    (identifier)
    (projection
      (parenthesized_expression
        (projection
          (identifier)
          (numeric_field)))
      (numeric_field)))
  (let_definition
    (identifier)
    (projection
      (projection
        (identifier)
        (numeric_field))
      (numeric_field))))

================================================================================
Bare numeric struct fields are structural labels
================================================================================

let record = { 001: 2, x: (3, 4) }

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (struct_expression
      (struct_field
        (numeric_field)
        (natural))
      (struct_field
        (identifier)
        (tuple_expression
          (natural)
          (natural))))))
