treesitter/test/corpus/extern_abi.txt
================================================================================
Marked extern ABIs retain arity, nesting, grouping, effects, and where clauses
================================================================================

extern add : fn(Nat, Nat,) -> Nat + !IO = "(a, b) => a + b"
extern zero : fn() -> Nat = "() => 0"
extern nested : fn(fn(Nat) -> Nat, (fn(String, Nat) -> String)) -> (fn() -> Nat) + !Outer where 'a = 'a = "host[\"nested\"]"

--------------------------------------------------------------------------------

(source_file
  (extern_definition
    name: (identifier)
    type: (extern_annotation
      type: (extern_function_type
        parameter: (identifier)
        parameter: (identifier)
        result: (identifier)
        effects: (effect_row
          (effect_case
            name: (effect_label)))))
    target: (string))
  (extern_definition
    name: (identifier)
    type: (extern_annotation
      type: (extern_function_type
        result: (identifier)))
    target: (string))
  (extern_definition
    name: (identifier)
    type: (extern_annotation
      type: (extern_function_type
        parameter: (extern_function_type
          parameter: (identifier)
          result: (identifier))
        parameter: (parenthesized_extern_function_type
          type: (extern_function_type
            parameter: (identifier)
            parameter: (identifier)
            result: (identifier)))
        result: (parenthesized_extern_function_type
          type: (extern_function_type
            result: (identifier)))
        effects: (effect_row
          (effect_case
            name: (effect_label))))
      clause: (where_clause
        (clause_comparison
          left: (type_variable)
          right: (type_variable))))
    target: (string)))

================================================================================
The fn ABI marker is rejected outside direct extern positions
================================================================================

let bad : fn(Nat) -> Nat = value
extern record : { callback: fn(Nat) -> Nat } = "host.record"

--------------------------------------------------------------------------------

(source_file
  (let_definition
    pattern: (identifier)
    (ERROR)
    type: (annotation
      type: (function_type
        from: (parenthesized_type
          (identifier))
        to: (identifier)))
    body: (identifier))
  (extern_definition
    name: (identifier)
    type: (extern_annotation
      type: (struct_type
        (struct_type_field
          name: (identifier)
          (ERROR)
          type: (function_type
            from: (parenthesized_type
              (identifier))
            to: (identifier)))))
    target: (string)))
